--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a href="page/biblioteca_proyectos.html">Biblioteca de Proyectos</a>
                 <a href="page/titulacion.html">Complementación o Titulación</a>
                 <a href="https://www.youtube.com/user/virtualsenati/" target="_blank">Canal YouTube</a>
-                <a href="#sinfo">SINFO</a>
+                <a href="page/software.html">Software</a>
             </div>
         </div>
     </nav>
@@ -148,7 +148,7 @@
                     </a>
 
                     <!-- SOFTWARE -->
-                    <a href="#software" class="service-card">
+                    <a href="page/software.html" class="service-card">
                         <div class="service-card-image">
                             <img src="img/software.png" alt="Software Académico">
                             <div class="service-card-overlay">
@@ -165,14 +165,6 @@
             </div>
         </section>
 
-        <!-- FAQ BANNER -->
-        <section class="faq-section">
-            <div class="container">
-                <div class="faq-banner">
-                    <img src="img/preguntas-frecuentes.png" alt="Preguntas Frecuentes">
-                </div>
-            </div>
-        </section>
 
     </main>
 
@@ -182,7 +174,7 @@
             <div class="video-left">
                 <div class="video-wrapper">
                     <iframe 
-                        src="https://www.youtube.com/embed/QKnwwtKf-iA" 
+                        src="https://youtu.be/QKnwwtKf-iA" 
                         frameborder="0"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
                         allowfullscreen>
@@ -232,6 +224,7 @@
                             <li><a href="page/diseños_curriculares.html">Diseños Curriculares</a></li>
                             <li><a href="page/biblioteca_proyectos.html">Biblioteca de Proyectos</a></li>
                             <li><a href="page/titulacion.html">Titulación</a></li>
+                            <li><a href="page/software.html">Software Académico</a></li>
                         </ul>
                     </div>
                 </div>
